--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>facebook</title>
+	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
 
@@ -39,5 +40,6 @@
 			js . src = "//connect.facebook.net/en_US/sdk.js" ; 
 			FJS . parentNode . insertBefore ( js , FJS ); } ( documento , 'guión' , 'facebook-jssdk' )); 
 		</script>
+		<script type="text/javascript" src="assets/js/main.js"></script>
 	</body>
 	</html>
